(fix) a11y skip link being covered by header

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,5 +1,5 @@
 nav {
-  position: fixed;
+  position: sticky;
   width: 100%;
   top: 0;
   z-index: 999;
