--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -123,7 +123,6 @@ body {
     min-height: 100%;
 
     main {
-      padding-top: $header-height + ($padding * 2);
 
       a {
         color: var(--text);
